<resources>
    <string name="app_name">timer</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_start">Start</string>
    <string name="count">Count</string>
    <string name="remark">Remark</string>
    <string name="category">Category</string>
    <string name="enter_time">Enter time in seconds</string>
    <string name="stopped">Stopped</string>
    <string name="timer">Timer</string>
    <string name="data">Data</string>
</resources>