<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".timer.TimerFragment">

    <EditText
        android:id="@+id/time_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_time"
        android:autofillHints="name"
        android:textSize="24sp"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <EditText
        android:id="@+id/category_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Category1"
        android:hint="@string/category"
        android:inputType="text"
        android:textSize="32sp"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/remark_input"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <EditText
        android:id="@+id/remark_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:hint="@string/remark"
        android:inputType="text"
        android:textSize="32sp"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintLeft_toRightOf="@+id/category_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:text="@string/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <ProgressBar
        android:id="@+id/progress_circular"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressDrawable="@drawable/drawable_circle_yellow"
        android:background="@drawable/drawable_circle_background"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:rotation="-90" />


</androidx.constraintlayout.widget.ConstraintLayout>